--- a/egov/egov-egfweb/src/main/webapp/WEB-INF/layout/tiles.xml
+++ b/egov/egov-egfweb/src/main/webapp/WEB-INF/layout/tiles.xml
@@ -859,5 +859,16 @@
         <put-attribute name="body"
                        value="/WEB-INF/views/approvebudget/approvebudget-searchSO.jsp"/>
     </definition> 
-    
+    <definition name="pr-voucher-search" extends="base_layout">
+        <put-attribute name="page-title" value="title.voucher.search" cascade="true"/>
+        <put-attribute name="body" value="/WEB-INF/views/paymentrefund/pr-voucher-search.jsp"/>
+    </definition>
+    <definition name="pr-voucher-view" extends="base_layout">
+        <put-attribute name="page-title" value="title.voucher.view" cascade="true"/>
+        <put-attribute name="body" value="/WEB-INF/views/paymentrefund/pr-voucher-view.jsp"/>
+    </definition>    
+    <definition name="pr-request-form" extends="base_layout">
+        <put-attribute name="page-title" value="title.pr.request" cascade="true"/>
+        <put-attribute name="body" value="/WEB-INF/views/paymentrefund/pr-request-form.jsp"/>
+    </definition>
 </tiles-definitions>
